crates/pack/tests/compile_fail/fact_actor_new_without_feature.stderr
error[E0599]: no function or associated item named `construct` found for struct `FactActor` in the current scope
 --> tests/compile_fail/fact_actor_new_without_feature.rs:7:24
  |
7 |     let _ = FactActor::construct("converge-engine", FactActorKind::System);
  |                        ^^^^^^^^^ function or associated item not found in `FactActor`
